@startuml Diseño Conceptual
skinparam linetype ortho

entity "AUTORES" as autores {
  *id_autor : int <<PK>>
  --
  nombre : string
  nacionalidad : string
}

entity "CATEGORIAS" as categorias {
  *id_categoria : int <<PK>>
  --
  nombre : string
}

entity "LIBROS" as libros {
  *id_libro : int <<PK>>
  --
  titulo : string
  isbn : string
  anio : int
  id_autor : int <<FK>>
  id_categoria : int <<FK>>
}

entity "USUARIOS" as usuarios {
  *id_usuario : int <<PK>>
  --
  nombre : string
  tipo : string
}

entity "PRESTAMOS" as prestamos {
  *id_prestamo : int <<PK>>
  --
  fecha_prestamo : date
  fecha_esperada : date
  fecha_real : date
}

entity "MULTAS" as multas {
  *id_multa : int <<PK>>
  --
  monto : decimal
  estado : string
}


autores ||--|{ libros : escriben
categorias ||--|{ libros : clasifican
libros ||--o{ prestamos : son_prestados
usuarios ||--o{ prestamos : realizan
prestamos ||--o| multas : generan

@enduml